refactor:MyBatisGenerator統合
Refactor department data model and mapping structure

Replaced `部門マスタMapper.xml` with a new `DepartmentCustomMapper` and `DepartmentCustomEntity` to simplify management of department-related data. MyBatis autogenerated models were moved to an `autogen` package for clarity. This enhances maintainability and aligns with standard code generation practices.

#6